Adding changes for po lines.