@@ -1,6 +1,7 @@
 package dev.ankis.po.services;
 
 import dev.ankis.po.models.PurchaseOrder;
+import dev.ankis.po.models.PurchaseOrderLine;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -12,14 +13,13 @@ public class PurchaseOrderService {
     public PurchaseOrderService() {
         PURCHASE_ORDERS.put(123l, new PurchaseOrder("PO1", 10000D, 123l, 111, null, Collections.emptyList()));
         PURCHASE_ORDERS.put(124l, new PurchaseOrder("PO2", 20000D, 124l, 111, null, Collections.emptyList()));
-        PURCHASE_ORDERS.put(125l, new PurchaseOrder("PO3", 25000D, 125l, 111, 123l, Collections.emptyList()));
+
+        List<PurchaseOrderLine> purchaseOrderLines = List.of(new PurchaseOrderLine("PO3", 1, "I12", 25, "EACH", 100D));
+        PURCHASE_ORDERS.put(125l, new PurchaseOrder("PO3", 25000D, 125l, 111, 123l, purchaseOrderLines));
+
         PURCHASE_ORDERS.put(126l, new PurchaseOrder("PO4", 30000D, 126l, 111, 124l, Collections.emptyList()));
         PURCHASE_ORDERS.put(127l, new PurchaseOrder("PO5", 80000D, 127l, 111, null, Collections.emptyList()));
         PURCHASE_ORDERS.put(128l, new PurchaseOrder("PO6", 90000D, 128l, 111, null, Collections.emptyList()));
-    }
-
-    public PurchaseOrder getByPoNumber(Long purchaseOrderNumber) {
-        return PURCHASE_ORDERS.get(purchaseOrderNumber);
     }
 
     public List<PurchaseOrder> getPoDetailsByPoNumber(Long purchaseOrderNumber) {
